# hrevn-surface-openclaw

./: README.md  openclaw_manifest.json  pyproject.toml
docs/: ALPHA_EXECUTION_TRACE.md  OPENCLAW_ALPHA_TESTING.md
docs/decisions/: OPENCLAW_FIRST_USE_CASE_DECISION.md
docs/entry/: FOR_AGENTS.md  FOR_AGENTS_BASELINE_ENTRY.md
docs/integration/: MANAGED_API_USAGE.md
examples/: baseline_check_request.json  baseline_check_response.json  generate_bundle_request.json  governance_gap_request.json  governance_gap_response.json  verify_bundle_request.json
scripts/: hrevn_openclaw_api.py  hrevn_openclaw_network_debug.py
src/hrevn_openclaw_cli/: __init__.py  cli.py  network_debug.py
